complete article section

--- a/userprofile_app/templates/userprofile_app/articles/article_categories_list.html
+++ b/userprofile_app/templates/userprofile_app/articles/article_categories_list.html
@@ -38,9 +38,9 @@
                 </div>
 
                 <!-- create new article_category -->
-                <a href="#" class="btn btn-info d-inline-flex align-items-center new-article-btn"
+                <a href="{% url 'userprofile_app:article_category_create' %}" class="btn btn-info d-inline-flex align-items-center new-article-btn"
                    style="background-color: #e3f2fd; color: #1976d2; border-color: #b3e5fc; font-weight: bold;">
-                    <i class="la la-plus mr-2"></i><span style="font-weight: bold;">ایجاد مقاله جدید</span>
+                    <i class="la la-plus mr-2"></i><span style="font-weight: bold;">ایجاد دسته بندی جدید</span>
                 </a>
 
             </div>
