--- a/userprofile_app/templates/userprofile_app/articles/article_form.html
+++ b/userprofile_app/templates/userprofile_app/articles/article_form.html
@@ -41,6 +41,7 @@
             <div class="dashboard-heading mb-5">
                 <h3 class="fs-22 font-weight-semi-bold">مقاله جدید</h3>
             </div>
+
             <form action=""
                   method="post"
                   class="MultiFile-intercepted"
@@ -55,7 +56,9 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="label-text">عنوان مقاله</label>
-                                    <input class="form-control form--control pl-3" type="text" name="title" value="{{ object.title }}">
+                                    <input class="form-control form--control pl-3" type="text" name="title"
+                                           value="{{ form.instance.title|default:'' }}"
+                                           {% if read_only %}disabled{% endif %}>
                                 </div>
                             </div>
 
@@ -63,7 +66,9 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="label-text">اسلاگ</label>
-                                    <input class="form-control form--control pl-3" type="text" name="slug" value="{{ object.slug }}">
+                                    <input class="form-control form--control pl-3" type="text" name="slug"
+                                           value="{{ form.instance.slug|default:'' }}"
+                                           {% if read_only %}disabled{% endif %}>
                                 </div>
                             </div>
 
@@ -71,7 +76,17 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="label-text">دسته بندی مقاله</label>
-                                    {{ form.selected_categories }}
+                                    <select name="selected_categories" multiple class="form-control"
+                                            {% if read_only %}disabled{% endif %}>
+                                        {% for category in categories %}
+                                            <option value="{{ category.id }}"
+                                                    {% if category in form.instance.selected_categories.all %}
+                                                    selected
+                                                    {% endif %}>
+                                                {{ category.title }}
+                                            </option>
+                                        {% endfor %}
+                                    </select>
                                 </div>
                             </div>
 
@@ -79,7 +94,58 @@
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="label-text">تگ های مقاله</label>
-                                    {{ form.selected_tags }}
+                                    <select name="selected_tags" multiple class="form-control"
+                                            {% if read_only %}disabled{% endif %}>
+                                        {% for tag in tags %}
+                                            <option value="{{ tag.id }}"
+                                                    {% if tag in form.instance.selected_tags.all %}
+                                                    selected
+                                                    {% endif %}>
+                                                {{ tag.title }}
+                                            </option>
+                                        {% endfor %}
+                                    </select>
+                                </div>
+                            </div>
+
+
+                            <!-- status -->
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="label-text">وضعیت</label>
+                                    <input class="form-control form--control pl-3" type="text" name="status"
+                                           value="{{ form.instance.status|default:'' }}"
+                                           {% if read_only %}disabled{% endif %}>
+                                </div>
+                            </div>
+
+                            <!-- is_active -->
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="label-text">فعال</label>
+                                    <input class="form-control form--control pl-3" type="text" name="is_active"
+                                           value="{{ form.instance.is_active|yesno:'بله,خیر' }}"
+                                           {% if read_only %}disabled{% endif %}>
+                                </div>
+                            </div>
+
+                            <!-- is_delete -->
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="label-text">حذف شده</label>
+                                    <input class="form-control form--control pl-3" type="text" name="is_delete"
+                                           value="{{ form.instance.is_delete|yesno:'بله,خیر' }}"
+                                           {% if read_only %}disabled{% endif %}>
+                                </div>
+                            </div>
+
+                            <!-- author -->
+                            <div class="col-lg-6">
+                                <div class="form-group">
+                                    <label class="label-text">نویسنده</label>
+                                    <input class="form-control form--control pl-3" type="text" name="author"
+                                           value="{{ form.instance.author.get_full_name|default:'' }}"
+                                           {% if read_only %}disabled{% endif %}>
                                 </div>
                             </div>
 
@@ -87,9 +153,9 @@
                             <div class="input-box col-lg-12">
                                 <label class="label-text">شرح کوتاه از مقاله</label>
                                 <div class="form-group">
-                                            <textarea rows="4" class="form-control form--control user-text-editor pl-3"
-                                                      name="short_description">{{ object.short_description }}"
-                                            </textarea>
+                        <textarea rows="4" class="form-control form--control user-text-editor pl-3"
+                                  name="short_description"
+                                  {% if read_only %}disabled{% endif %}>{{ form.instance.short_description|default:'' }}</textarea>
                                 </div>
                             </div>
 
@@ -97,9 +163,9 @@
                             <div class="input-box col-lg-12">
                                 <label class="label-text">متن مقاله</label>
                                 <div class="form-group">
-                                            <textarea rows="15" class="form-control form--control user-text-editor pl-3"
-                                                      name="text">{{ object.text }}"
-                                            </textarea>
+                        <textarea rows="15" class="form-control form--control user-text-editor pl-3"
+                                  name="text"
+                                  {% if read_only %}disabled{% endif %}>{{ form.instance.text|default:'' }}</textarea>
                                 </div>
                             </div>
 
@@ -110,25 +176,28 @@
                                     <div class="input-box col-lg-12 mb-5">
                                         <div class="media media-card align-items-center">
                                             <div class="media-img media-img-lg mr-4 bg-gray">
-                                                <a href="{{ object.image.url }}" target="_blank">
-                                                    <img class="mr-3" src="{{ object.image.url }}" alt="تصویر آواتار" style="max-width:200px;">
-                                                </a>
+                                                {% if form.instance.image %}
+                                                    <img class="mr-3" src="{{ form.instance.image.url }}"
+                                                         alt="تصویر مقاله">
+                                                {% else %}
+                                                    <img class="mr-3" src="/static/images/team11.jpg"
+                                                         alt="تصویر پیش‌فرض">
+                                                {% endif %}
                                             </div>
-
-                                            <div class="media-body">
-                                                <div class="file-upload-wrap file-upload-wrap-2">
-                                                    <div class="MultiFile-wrap" id="MultiFile2">
-                                                        <input type="file"
-                                                               name="image"
-                                                               class="multi file-upload-input with-preview MultiFile-applied"
-                                                               multiple=""
-                                                               id="MultiFile2"
-                                                               value="">
-                                                        <div class="MultiFile-list" id="MultiFile2_list"></div>
+                                            {% if not read_only %}
+                                                <div class="media-body">
+                                                    <div class="file-upload-wrap file-upload-wrap-2">
+                                                        <div class="MultiFile-wrap" id="MultiFile2">
+                                                            <input type="file"
+                                                                   name="image"
+                                                                   class="multi file-upload-input with-preview MultiFile-applied"
+                                                                   id="MultiFile2">
+                                                            <div class="MultiFile-list" id="MultiFile2_list"></div>
+                                                        </div>
+                                                        <span class="file-upload-text"><i class="la la-photo mr-2"></i>یک عکس آپلود کنید</span>
                                                     </div>
-                                                    <span class="file-upload-text"><i class="la la-photo mr-2"></i>یک عکس آپلود کنید</span>
                                                 </div>
-                                            </div>
+                                            {% endif %}
                                         </div>
                                     </div>
                                 </div>
@@ -138,11 +207,15 @@
                     </div>
                 </div>
 
-                <div class="course-submit-btn-box pb-4">
-                    <button class="btn theme-btn" type="submit">ذخیره مقاله</button>
-                </div>
+                {% if not read_only %}
+                    <div class="course-submit-btn-box pb-4">
+                        <button class="btn theme-btn" type="submit">ذخیره مقاله</button>
+                    </div>
+                {% endif %}
             </form>
+
         </div>
     </div>
+
 
 {% endblock %}
